<resources>
    <string name="app_name">PeruGoPF</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_register">Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="register">Registrar</string>
    <string name="register_button">Registrarse</string>
    <string name="sign_out">logout</string>
    <string name="no_events">No hay eventos</string>
    <string name="save">Guardar</string>
    <string name="enter_title">Nombre del evento</string>
    <string name="hint_content">Descripción del evento</string>
    <string name="hint_direccion">Dirección del evento</string>
    <string name="content">Descripción:</string>
    <string name="title">Evento:</string>
    <string name="take_photo">Tomar Foto</string>
    <string name="tvFecha">Fecha</string>
    <string name="tvDireccion">Dirección</string>
    <string name="tvUbicacion">Ubicación</string>
    <string name="hint_latitud">Latitud</string>
    <string name="hint_longitud">Longitud</string>
    <string name="tvTitulo">Nuevo evento</string>
    <string name="hint_fecha_del_evento">Fecha del evento</string>
    <string name="abrir_maps">Abrir en google maps</string>
</resources>
